# pygit

./: .gitignore  LICENSE  README.md  __main__.py  pyproject.toml
.github/workflows/: test.yml
benchmarks/: bench.py
pygit/: __main__.py
pygitlib/: branch.py  checkout.py  commit.py  diff.py  gc.py  gitignore.py  graph.py  index.py  merge.py  objects.py  pack.py  repository.py  restore.py  serve.py  stash.py  tag.py
pygitlib/templates/: index.html
scripts/: demo.ps1
tests/: test_branch.py  test_commit.py  test_diff.py  test_gc.py  test_gitignore.py  test_graph.py  test_index.py  test_merge.py  test_objects.py  test_pack.py  test_restore.py  test_stash.py  test_tag.py
